# suckless-dotfiles

./: .gitignore  .sync_23b7b29ab393.db-shm  README.md  install.sh
src/walrs/: Cargo.toml  LICENSE  Makefile  README.md  autocomplete.sh  flake.nix  walrs.1
src/walrs/colorschemes/dark/: 3024  base16-apathy  base16-ashes  base16-atelier-cave  base16-atelier-dune  base16-atelier-estuary  base16-atelier-forest  base16-atelier-heath  base16-atelier-lakeside  base16-atelier-plateau  base16-atelier-savanna  base16-atelier-seaside  base16-atelier-sulphurpool  base16-bespin  base16-black-metal-bathory  base16-black-metal-burzum  base16-black-metal-funeral  base16-black-metal-gorgoroth  base16-black-metal-immortal  base16-black-metal-khold  base16-black-metal-marduk  base16-black-metal-mayhem  base16-black-metal-nile  base16-black-metal-venom  base16-brewer  base16-bright  base16-brushtrees  base16-circus  base16-classic  base16-codeschool  base16-embers  base16-flat  base16-google  base16-grayscale  base16-greenscreen  base16-gruvbox-hard  base16-gruvbox-medium  base16-gruvbox-soft  base16-harmonic  base16-hopscotch  (+157 more)
src/walrs/colorschemes/light/: ashes  base16-atelier-cave  base16-atelier-dune  base16-atelier-estuary  base16-atelier-forest  base16-atelier-heath  base16-atelier-lakeside  base16-atelier-plateau  base16-atelier-savanna  base16-atelier-seaside  base16-atelier-sulphurpool  base16-classic  base16-cupcake  base16-cupertino  base16-default  base16-github  github  (+19 more)
src/walrs/src/: create_templates.rs  get_colors.rs  main.rs  reload.rs  theme.rs  utils.rs  wallpaper.rs
(+688 files in other folders)
